[package]
name = "yunzai_backup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
git2 = "0.16"
tempfile = "3"
chrono = { version = "0.4", features = ["serde", "clock"] }

